package zeldiablo.Item;

public abstract class ItemUtils implements Item {
}
