@startuml
title Diagramme Classes avec fonctionnalités (version 4)

class "Jeu" {
    + {static} VIDE = ' ' : char
    + {static} MUR = '#' : char
    + {static} MUR_FRIABLE = '*' : char
    + {static} PIEGE = 'P' : char
    + {static} BOMBE = '$' : char
    + {static} FIN = '&' : char
    + {static} AMULETTE = 'A' : char
    + {static} HERO = '@' : char
    + {static} SPIDER = 'S' : char
    + {static} TROLL = 'T' : char
    + {static} GHOST = 'G' : char
    + {static} BLOB = 'B' : char
    + {static} SOINS = '+' : char
    + {static} TELEPORTEUR = '|' : char
    + {static} ARTIFICIER = 'R' : char

    - size : int[]
    - hero : Aventurier
    - monstres : List<Personnage>
    - cases : Case[][]
    - fin : int[]
    - explosionAffichage : List<int[]>
    - recharger : boolean
    - gestionnaireMonstres : GestionnaireMonstres

    + chargerNiveau(nomFichier : String) : void
    + getHero() : Aventurier
    + getCases() : Case[][]
    + addCase(c : Case) : void
    + removeCase(x : int, y : int) : void
    + getExplosionAffichage() : ArrayList<int[]>
    + getMonstres() : ArrayList<Personnage>
    + getCase(x : int, y : int) : Case
    + getChar(x : int, y : int) : char
    + getFin() : int[]
    + getGestionnaireMonstres() : GestionnaireMonstres
    + getSize() : int[]
    + setHero(hero : Aventurier) : void
    + setFin(fin : int[]) : void
    + setSize(size : int[]) : void

    + detruire(x : int, y : int) : void
    + getSuivant(x : int, y : int, commandeUser : Commande) : int[]
    + verifierDeplacement(x : int, y : int, commandeUser : Commande) : void
    + evoluer(commandeUser : Commande) : void
    + etreFini() : boolean
}

class GestionnaireMonstres {
    - jeu : Jeu
    - timer : Timer

    + GestionnaireMonstres(jeu : Jeu)
    + startMonsters() : void
    + monstreAttaque(x : int, y : int) : void
    + verifMort() : void
}

class DessinLaby {
    - jeu : Jeu
    - {static} flamme : BufferedImage
    - {static} gameOver : BufferedImage
    - {static} win : BufferedImage
    - {static} porte : BufferedImage
    - {static} porteOuverte : BufferedImage
    - {static} mur : BufferedImage
    - {static} vide : BufferedImage
    - {static} soins : BufferedImage
    - {static} soinsDetruit : BufferedImage
    - {static} piege : BufferedImage
    - {static} teleporteur : BufferedImage
    - {static} teleporteurDetruit : BufferedImage
    - {static} murFriable : BufferedImage
    - {static} bombe : BufferedImage
    - {static} piegeDetruit : BufferedImage
    - {static} amulette : BufferedImage
    - {static} spider : BufferedImage
    - {static} troll : BufferedImage
    - {static} ghost : BufferedImage
    - {static} blob : BufferedImage
    - {static} artificier : BufferedImage
    - {static} hero : BufferedImage
    - {static} spiderAttaque : BufferedImage
    - {static} trollAttaque : BufferedImage
    - {static} ghostAttaque : BufferedImage
    - {static} blobAttaque : BufferedImage
    - {static} artificierAttaque : BufferedImage
    - {static} heroAttaque : BufferedImage
    - {static} coeur : BufferedImage

    + DessinLaby(jeu : Jeu)
    + dessiner(image : BufferedImage) : void
    + drawCase(g : Graphics2D, c : Case) : void
    + {static} chargerImage(chemin : String) : BufferedImage
}

package "entite" {
    abstract class Personnage {
        # vie : int
        # isAttaque : boolean
        # degats : int

        + Personnage(x : int, y : int)

        + getVie() : int
        + setVie(vie : int) : void
        + getIsAttaque() : boolean

        + addVie(i : int) : void
        + setPos(x : int, y : int) : void
        + etreMort() : boolean
        + attaquer(victime : Personnage) : void
        + deplacer(jeu : Jeu, commandeUser : Commande) : void
    }

    class Aventurier {
        - inventaire : ArrayList<Item>
        - jeu : Jeu

        + Aventurier(x : int, y : int)
        + setJeu(jeu : Jeu) : void
        + getInventaire() : ArrayList<Item>
        + haveItem(nom : String) : boolean
        + addInventaire(x : int, y : int) : void
        + attaquer(victime : Personnage) : void
        + getType() : String
    }

    class Spider {
        + Spider(x : int, y : int)
        + getType() : String
    }

    class Troll {
        + Troll(x : int, y : int)
        + getType() : String
        + regenerer() : void
    }

    class Ghost {
        + Ghost(x : int, y : int)
        + getType() : String
        + deplacer(jeu : Jeu, commandeUser : Commande) : void
    }

    class Blob {
        + Blob(x : int, y : int)
        + getType() : String
        + deplacer(jeu : Jeu, commandeUser : Commande) : void
    }

    class Artificier {
        - jeu : Jeu

        + Artificier(x : int, y : int)
        + setJeu(jeu : Jeu) : void
        + getType() : String
        + attaquer(victime : Personnage) : void
    }
}

package "environnement" {
    abstract class Case {
        # x : int
        # y : int
        # isTraversable : boolean
        - caseSousJacente : Case

        + Case(x : int, y : int)

        + getX() : int
        + getY() : int
        + getIsTraversable() : boolean
        + getCaseSousJacente() : Case
        + setCaseSousJacente(caseSousJacente : Case) : void
        + getType() : String
    }

    class Mur {
        + Mur(x : int, y : int)
        + getType() : String
    }

    class PiegeDetruit {
        + PiegeDetruit(x : int, y : int)
        + getType() : String
    }

    class MurFriable {
        + MurFriable(x : int, y : int)
        + getType() : String
    }

    abstract class CaseEffet {
        + CaseEffet(x : int, y : int)
        + {abstract} effet(jeu : Jeu, perso : Personnage) : void
    }

    class Piege {
        - isRevele : boolean

        + Piege(x : int, y : int)
        + getIsRevele() : boolean
        + getType() : String
        + effet(jeu : Jeu, perso : Personnage) : void
    }

    class Bombe {
        + Bombe(x : int, y : int)
        + getType() : String
        + exploser(jeu : Jeu) : void
    }

    abstract class CaseDetruite {
        + CaseDetruite(x : int, y : int)
    }

    class Soins {
        + Soins(x : int, y : int)
        + getType() : String
        + effet(jeu : Jeu, perso : Personnage) : void
    }

    class SoinsDetruit {
        + SoinsDetruit(x : int, y : int)
        + getType() : String
    }

    class Teleporteur {
        + Teleporteur(x : int, y : int)
        + getType() : String
        + effet(jeu : Jeu, perso : Personnage) : void
    }

    class TeleporteurDetruit {
        + TeleporteurDetruit(x : int, y : int)
        + getType() : String
    }
}

package "item" {
    interface Item {
        + getType() : String
        + use(personnage : Personnage) : void
    }

    abstract class ItemPlacable {
        + ItemPlacable(x : int, y : int)
        + effet(jeu : Jeu, perso : Personnage) : void
    }

    class Amulette {
        + Amulette(x : int, y : int)
        + getType() : String
        + use(personnage : Personnage) : void
    }

    abstract class ItemUtils {
    }
}

package "exception" {
    class ActionInconnueException {
        + ActionInconnueException(message : String)
    }

    class FichierIncorrectException {
        + FichierIncorrectException(message : String)
    }
}

' ========================
' Relations
' ========================
Case <|-- Mur
Case <|-- MurFriable
Case <|-- Personnage
Case <|-- CaseEffet
Case <|-- Bombe
Case <|-- CaseDetruite

CaseEffet <|-- Piege
CaseEffet <|-- ItemPlacable
CaseEffet <|-- Soins
CaseEffet <|-- Teleporteur

CaseDetruite <|-- PiegeDetruit
CaseDetruite <|-- SoinsDetruit
CaseDetruite <|-- TeleporteurDetruit

ItemPlacable <|-- Amulette
Item <|.. ItemPlacable
Item <|.. ItemUtils

Personnage <|-- Aventurier
Personnage <|-- Spider
Personnage <|-- Troll
Personnage <|-- Ghost
Personnage <|-- Blob
Personnage <|-- Artificier

ActionInconnueException --|> RuntimeException
FichierIncorrectException --|> RuntimeException

DessinJeu <|.. DessinLaby

Jeu "1" --> "1" Aventurier : hero
Jeu "1" *-- "1" GestionnaireMonstres : gestionnaireMonstres
Jeu "1" --> "*" Personnage : monstres
Jeu "1" --> "*" Case : cases

Aventurier "1" --> "*" Item : inventaire
Aventurier "1" --> "1" Jeu : jeu

GestionnaireMonstres "1" --> "1" Jeu : jeu

DessinLaby "1" --> "1" Jeu : jeu

Case "1" --> "0..1" Case : caseSousJacente

@enduml
